--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,12 @@
 }
 
 .marketing h2 {
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .marketing .col-lg-4 p {
-    margin: 1em 4em;
+    margin: 1em 5em;
+    font-weight: 400;
 }
 
 .marketing .col-lg-4 img{
@@ -57,20 +58,41 @@
 }
 
 .logo_main {
-    justify-content: left;
-    margin: 1em 5em;
+    width: 10em;
+    margin: 2em 9em;
+}
+
+.navbar {
+    height: 3.5em;
+}
+
+.nav-item .nav-link {
+    padding-top: 1em;
+    padding-left: 2em;
 }
 
 .btn_contactar {
     justify-content: right;
     margin-left: 15vw;
     color: white;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 20px;
-    width: 153px;
-    height: 52px;
-
+    width: 150px;
+    height: 40px;
     background: #2087C5;
+    border-color: transparent;
+    border-radius: 100px;
+}
+
+.btn_contactar_cambiado {
+    justify-content: right;
+    margin-left: 15vw;
+    color: #2087C5;
+    font-weight: 600;
+    font-size: 20px;
+    width: 150px;
+    height: 40px;
+    background: white;
     border-color: transparent;
     border-radius: 100px;
 }
@@ -88,13 +110,25 @@
     margin: 1em 0;
 }
 
+.footer_left .data_company {
+    margin-left: 10em;
+}
+
+.iconos {
+    margin-left: 9.5em;
+}
+
+.iconos img {
+    margin: 0 0.25em;
+}
+
 .images .row .col-lg-4 {
     padding: 0;
 }
 
 .p_nuestros {
     color: black;
-    font-weight: 400;
+    font-weight: 550;
     font-size: 36px;
     text-align:center;
 }
@@ -120,3 +154,9 @@
 .mensaje {
     height: 8em;
 }
+
+.form_title {
+    margin: 1em 0 0 0;
+}
+
+
